# robotraconteurlite

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: main.yml  misra.yml
cmake/: robotraconteurliteConfig.cmake.in
examples/: CMakeLists.txt
examples/tiny_client/: robotraconteurlite_tiny_client.c  tiny_client_service.py
examples/tiny_service/: robotraconteurlite_tiny_service.c  tiny_service_client.py
include/robotraconteurlite/: array.h  clock.h  config.h  connection.h  err.h  message.h  message_data.h  node.h  nodeid.h  poll.h  robotraconteurlite.h  tcp_transport.h  util.h
platform/posix/src/: clock_posix.c  nodeid_libuuid.c  tcp_transport_posix.c
platform/win32/src/: clock_win32.c  tcp_transport_win32.c
src/: array.c  array_types.c  clock_posix.c  clock_win32.c  connection.c  message.c  message_data.c  message_types.c  node.c  nodeid.c  nodeid_libuuid.c  nodeid_win32.c  poll.c  poll_posix.c  poll_win32.c  tcp_transport.c  tcp_transport_posix.c  tcp_transport_win32.c
src/template/: array.h.j2  array_types.c.j2  gen.sh  message_data.c.j2  message_data.h.j2  message_types.c.j2
test/: CMakeLists.txt  array_test.c  array_test_types.c  message_test.c
test/installed_test/: CMakeLists.txt
test/no_stdint_test/: CMakeLists.txt  robotraconteurlite_config_local.h
test/template/: array_test_types.c.j2
test/tiny_test/: CMakeLists.txt  tiny_client_ci_test.py  tiny_service_ci_test.py
