include_directories(${CMAKE_SOURCE_DIR}/include)

add_executable(robotraconteurlite_tiny_service tiny_service/robotraconteurlite_tiny_service.c)
target_link_libraries(robotraconteurlite_tiny_service robotraconteurlite)

add_executable(robotraconteurlite_tiny_client tiny_client/robotraconteurlite_tiny_client.c)
target_link_libraries(robotraconteurlite_tiny_client robotraconteurlite)
