find_package(cmocka REQUIRED)
include_directories(${CMOCKA_INCLUDE_DIR})
add_executable(robotraconteurlite_array_test array_test.c)
target_link_libraries(robotraconteurlite_array_test robotraconteurlite ${CMOCKA_LIBRARY})
add_test(array_test robotraconteurlite_array_test)
add_executable(robotraconteurlite_array_types_test array_test_types.c)
target_link_libraries(robotraconteurlite_array_types_test robotraconteurlite ${CMOCKA_LIBRARY})
add_test(array_test robotraconteurlite_array_types_test)
add_executable(robotraconteurlite_message_test message_test.c)
target_link_libraries(robotraconteurlite_message_test robotraconteurlite ${CMOCKA_LIBRARY})
add_test(message_test robotraconteurlite_message_test)
